--- a/invoicemanagement/src/App.css
+++ b/invoicemanagement/src/App.css
@@ -17,6 +17,17 @@ input[type=text] {
   border: 1px solid grey;
 }
 
+
+
+
+input[type=password] {
+  width: 100%;
+  padding: 5px 8px;
+  border-radius: 5px;
+
+  box-sizing: border-box;
+  border: 1px solid grey;
+}
 .outer
 {
   background-color: #F1F6FC;
